# raylib-physfs

./: .gitmodules  CMakeLists.txt  README.md  raylib-physfs.h
.github/workflows/: Tests.yml
cmake/: FindPhysFS.cmake  FindRaylib.cmake
examples/: CMakeLists.txt
examples/audio/: audio_music_stream.c  audio_sound_loading.c
examples/shaders/: shaders_texture_waves.c
examples/text/: text_basic_loading.c  text_font_loading.c
examples/text/resources/: helloworld.txt
examples/textures/: textures_image_loading.c
include/: CMakeLists.txt  raylib-physfs.h
includes/: CMakeLists.txt
lib/: CMakeLists.txt  raylib-physfs.c
test/: CMakeLists.txt  raylib-physfs-test.c
